--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 				<section>Going from build to an app architecture</section>
 				<section>Creating your own Agents to work while you sleep</section>
 				<section>Debugging</section>
-				<section>CyberSec, Robotics, and Ethical Hacking</section>
+				<section>CyberSec, Robotics, and Ethical Hacking: Adopting other systems and frameworks and hardening your App's security</section>
+				<section>The Future of AI and Tech</section>
 				<section>Demo</section>
 				<section>Q&A and Free Resources</section>
 			</div>
