--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 				<section>Botnets, Malware, Mass Surveilance, and App Pipelines</section>
 				<section>3 to 7 year forcast, the time to get started is right now</section>
 				<section>Why You Are Qualified: the 95% quit when it starts to get hard...</section>
-				<section>Learning how to think in code, Choosing a framework</section>
+				<section>Learning how to think in code, Choosing a framework and Coding environment</section>
+				<section>The command line is your friend, Bash, ZSH, going back to the origin of MS_DoS</section>
 				<section>Take a Break</section>
 				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer</section>
 				<section>Syntax and PseudoCode</section>
