--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				<section>Why You Are Qualified: the 95% quit when it starts to get hard...</section>
 				<section>Learning how to think in code, Choosing a framework and Coding environment</section>
 				<section>The command line is your friend, Bash, ZSH, going back to the origin of MS_DoS</section>
+				<section>AI Tools, TUI, MetaLlama, Ollama, leveraging low cost or free tools
 				<section>Take a Break</section>
 				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer</section>
 				<section>Syntax and PseudoCode</section>
@@ -36,7 +37,7 @@
 				<section>CyberSec, Robotics, and Ethical Hacking: Adopting other systems and frameworks and hardening your App's security</section>
 				<section>The Future of AI and Tech</section>
 				<section>Demo</section>
-				<section>Q&A and Free Resources</section>
+				<section>Q&A and Resources</section>
 			</div>
 		</div>
 
