organizing topics more

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 		<div class="reveal">
 			<div class="slides">
 				<section><h1>Leveraging <strong>{AI}</strong> to Code</h1><br/><code>A systems thinking approach</code></section>
-				<section>Who Am I?</section>
+
+				<section>Who Am I?
+					<section>Ethical Hacking</section>
+					<section>Chess and the hunger for more</section>
+					<section>My App's</section>
+				</section>
+
 				<section>What is System's Thinking</section>
 				<section>Vibe Coding, Not Even ONCE</section>
 				<section>Botnets, Malware, Mass Surveilance, and App Pipelines</section>
@@ -25,7 +31,7 @@
 				<section>Why You Are Qualified: the 95% quit when it starts to get hard...</section>
 				<section>Learning how to think in code, Choosing a framework and Coding environment</section>
 				<section>The command line is your friend, Bash, ZSH, going back to the origin of MS_DoS</section>
-				<section>AI Tools, TUI, MetaLlama, Ollama, leveraging low cost or free tools
+				<section>AI Tools, TUI, MetaLlama, Ollama, leveraging low cost or free tools</section>
 				<section>Take a Break</section>
 				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer</section>
 				<section>Syntax and PseudoCode</section>
@@ -35,7 +41,7 @@
 				<section>Creating your own Agents to work while you sleep</section>
 				<section>Debugging</section>
 				<section>CyberSec, Robotics, and Ethical Hacking: Adopting other systems and frameworks and hardening your App's security</section>
-				<section>The Future of AI and Tech</section>
+				<section>The Future of AI and Humanity</section>
 				<section>Demo</section>
 				<section>Q&A and Resources</section>
 			</div>
