updated the other things that are in the

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				<section>Debugging</section>
 				<section>CyberSec, Robotics, and Ethical Hacking: Adopting other systems and frameworks and hardening your App's security</section>
 				<section>The Future of AI and Humanity</section>
+				<section>Dopamine Detox and Deciding a Price that you're willing to pay to get your ideas out into the world</section>
 				<section>Demo</section>
 				<section>Q&A and Resources</section>
 			</div>
