adding more to the class presentation

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 					<section>My App's</section>
 				</section>
 
-				<section>What is System's Thinking</section>
-				<section>Vibe Coding, Not Even ONCE</section>
-				<section>Botnets, Malware, Mass Surveilance, and App Pipelines</section>
-				<section>3 to 7 year forcast, the time to get started is right now</section>
-				<section>Why You Are Qualified: the 95% quit when it starts to get hard...</section>
-				<section>Learning how to think in code, Choosing a framework and Coding environment</section>
-				<section>The command line is your friend, Bash, ZSH, going back to the origin of MS_DoS</section>
+				<section>What is System's Thinking: The person who implements systems thinking wins every time</section>
+				<section>Vibe Coding, Not Even ONCE, the benefits and pitfalls of vibecoding</section>
+				<section>Botnets, Malware, Mass Surveilance, and App Pipelines: Business people ship way too fast for IT to keep up</section>
+				<section>3 to 7 year forcast, who knows exactly what will happen, the time to start is right now</section>
+				<section>Why You Are Qualified: AI is a force multiplier and the new tech of swarm-agents</section>
+				<section>Learning how to think in code, Choosing a framework and Coding environment, human-readability and choosing quirks wisely.</section>
+				<section>The command line is your friend, Bash, ZSH, and mastering unix, going back to the origin of MS_DoS</section>
 				<section>AI Tools, TUI, MetaLlama, Ollama, leveraging low cost or free tools</section>
 				<section>Take a Break</section>
 				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer</section>
