adding to the index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section><h1>Leveraging <strong>{AI}</strong> to Code</h1><br/><code>A systems thinking approach</code></section>
+				<section>Go around the class, have everyone say their name and what inspired them to learn about AI and the future of Tech.</section>
 
 				<section>Who Am I?
 					<section>Ethical Hacking</section>
