adding to sections

--- a/index.html
+++ b/index.html
@@ -16,22 +16,63 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section><h1>Leveraging <strong>{AI}</strong> to Code</h1><br/><code>A systems thinking approach</code></section>
+				<section><h1>Leveraging <strong>{AI}</strong></h1><br/><code>Coding with a systems thinking approach</code>
+					<p>What does this mean? What really is systems thinking. Well let's compare it to medicine where many doctors specialize in their dicipline but have to punt you from doctor to doctor if they cannot connect the dots with other areas of modern medicine. A holistic doctor has one advantage in that they have the ability to go to medical school and decide how to approach the human body as a complete map. They may not have the benefit of the latest tools and technology but atleast they can be very effective atleast in finding negative habits and patterns that many other doctors overlook. But what if you could have the benefit of all the modern technology and also approach medicine with a connect the dots mentality, it would be less of an assembly line and they would have all of the tools to be able to diagnose and find the root cause quickly.
+
+					So systems thinking is being able to look at technology from a birds eye view and at the same time be able to fufill deficencies and be able to look across diperate methodologies but still connect the dots to create next level systems, software, hardware configurations, and networking to fit the needs of the future.
+
+					With the increase of advanced technologies across europe and asia, specifically talking about Russia, China, India, North Korea, Israel, and a few other countries and regions responsible for creating some of the most advanced technologies and malware. The US whether we agree with the rate of advancement or not is competing on the global market to produce the next level of CPU manufacturing and tech-infrastructure to both keep our military and espionage hackers (whether the US admits to having some of the best hackers at their finger tips) well equipped to stay ahead.
+
+					But what is AI and what is the future of our world.
+
+
+				</p>
+				</section>
 				<section>Go around the class, have everyone say their name and what inspired them to learn about AI and the future of Tech.</section>
 
 				<section>Who Am I?
+					<p>
+						I grew up in a Jewish family on the west coast and was a nerd as kid to be able to escape a pretty traumatic, at the time, childhood by doing "ethical hacking". My brother and I were moved aroudn alot and had sustained being physically and mentally tortured by our biological mom. So I compounded all of that trapped enerfy to be able into an outlet of problem solving and tinkering.
+
+						Fast forward to my 20s I had gained the desire to do chess and learn and compete along side my coacheas who happened to be chess masters and the best players in the state. I had the pleasure to meet and hang out with Timur Garayev, play against Hikaru Nakamura a few times, and travel to play in amateur tournaments.
+
+						At the time chess engines were hitting the scene and I took my experience of web development to create a chess app and go deeper into how software can be used for machine learning.
+
+						Although I do not have many credentials, I always believe that real tangible skills will beat someone with higher education but without the burning desire to learn more and create.
+
+						At present times I am shipping apps on the App Store and Google Play and also running my tech company, TechNYC.io, where we deliver TechEd in a gamified duo-lingo inspired way.
+
+						I believe my purpose here on this earth is to enable everyone with or without technical skills, to gain that spark to birth their ideas out into the world and join the 1.5 trillion dollar AI and growing by 3-600million every year market.
+
+						My personal opinion is that 70-90% of traditional jobs will get wiped in the next 7-10 years, and we will see dramatic advancements of AI and Robotics/Nanobot technology and other super-out there ideas in the next 2-5.
+					<p/>
+
 					<section>Ethical Hacking</section>
 					<section>Chess and the hunger for more</section>
 					<section>My App's</section>
 				</section>
 
-				<section>What is System's Thinking: The person who implements systems thinking wins every time</section>
-				<section>Vibe Coding, Not Even ONCE, the benefits and pitfalls of vibecoding</section>
-				<section>Botnets, Malware, Mass Surveilance, and App Pipelines: Business people ship way too fast for IT to keep up</section>
+				<section>What is System's Thinking: The person who implements systems thinking wins every time
+					<p>What Are SWARMS and how do they relate to systems thinking and automation?</p>
+					<p>Why AI is a Force Multiplier on effor and what that means for everyday people</p>
+					<p>Why you possess the ability to become a business entity or atleast compete on the global market when everyone else is discouraged and focused too much on politics and watching the news.</p>
+				</section>
+
+				<section>Vibe Coding, Not Even ONCE, the benefits and pitfalls of vibecoding
+					<p>Although there are many set and forget benefits to building features with vibecoding, AI available to the mass market is either weak or it's designed to work well only on a certain set of task-types. THis being the case you have many behavior side effects and mistakes in your code called bugs, these bugs although seemingly harmless create wide gaps in the infrastructure for suspecting botnets and others to walk on in, considering that you've released your work to the world in a production style app.</p>
+				</section>
+
+				<section>Botnets, Malware, Mass Surveilance, and App Pipelines: Business people ship way too fast for IT to keep up
+				</section>
+
 				<section>3 to 7 year forcast, who knows exactly what will happen, the time to start is right now</section>
+
 				<section>Why You Are Qualified: AI is a force multiplier and the new tech of swarm-agents</section>
+
 				<section>Learning how to think in code, Choosing a framework and Coding environment, human-readability and choosing quirks wisely.</section>
+
 				<section>The command line is your friend, Bash, ZSH, and mastering unix, going back to the origin of MS_DoS</section>
+				
 				<section>AI Tools, TUI, MetaLlama, Ollama, leveraging low cost or free tools</section>
 				<section>Take a Break</section>
 				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer</section>
