--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 					With the increase of advanced technologies across europe and asia, specifically talking about Russia, China, India, North Korea, Israel, and a few other countries and regions responsible for creating some of the most advanced technologies and malware. The US whether we agree with the rate of advancement or not is competing on the global market to produce the next level of CPU manufacturing and tech-infrastructure to both keep our military and espionage hackers (whether the US admits to having some of the best hackers at their finger tips) well equipped to stay ahead.
 
-					But what is AI and what is the future of our world.
+					Stay tuned for the coding demo at the end.
 
 
 				</p>
@@ -63,13 +63,29 @@
 				</section>
 
 				<section>Botnets, Malware, Mass Surveilance, and App Pipelines: Business people ship way too fast for IT to keep up
+					<p>To understand how to create effective software, we first want to understand a side effect of companies that ship apps quickly and how it impacts how it affects how we write code. If you write software for just your smart home or to solve a problem for you and your family. Or even if your software is mostly airgapped, you will not have to take in these considerations. But if you want thousands to potentially millions or even billions of people to use your code, then we are liable to make sure our users are and their data are safe from prying eyes.<p/>
+
+					<p/> AI has enabled the average hacker to create masterful works of art in malware, botnets, and namely pry open vulnerabilities in the forms of bugs to gain access to client, the backend, and eventually mass storage in the form of a database
+
+					Once in hackers can insert malicious script and maintain persistence on your production environment doing all of this while often being undetected for month, years or indefinitely without your knowledge while your app continues to be hosted..
+
+					</p>
+					<p>So how do I create robust systems in the age when the most advanced threats are perpetually being created and deployed?</p>
+
 				</section>
 
-				<section>3 to 7 year forcast, who knows exactly what will happen, the time to start is right now</section>
+				<section>Why You Are Qualified: AI is a force multiplier and the new tech of swarm-agents
+					<p>The landscape over the next 3-7 years and beyond with stats to back it up</p>
+					<p>How can a non-technical person get started right now? Gaining the skills to close the gap and build systems and Apps that are made with the user in mind</p>
+					<p>Timing and shipping ideas for the long-game</p>
+					<p>Following your inspiration and the winner effect</p>
+				</section>
 
-				<section>Why You Are Qualified: AI is a force multiplier and the new tech of swarm-agents</section>
-
-				<section>Learning how to think in code, Choosing a framework and Coding environment, human-readability and choosing quirks wisely.</section>
+				<section>Learning how to think in code, Choosing a framework and Coding environment, human-readability and choosing quirks wisely.
+					<p>High Level VS Low Level Languages</p>
+					<p>Compiling and Transpiling</p>
+					<p>Choose your weapon Meme, finding the right tools for your toolbelt</p>
+				</section>
 
 				<section>The command line is your friend, Bash, ZSH, and mastering unix, going back to the origin of MS_DoS</section>
 				
@@ -85,8 +101,10 @@
 				<section>CyberSec, Robotics, and Ethical Hacking: Adopting other systems and frameworks and hardening your App's security</section>
 				<section>The Future of AI and Humanity</section>
 				<section>Dopamine Detox and Deciding a Price that you're willing to pay to get your ideas out into the world</section>
-				<section>Demo</section>
+				<section>Coding Demo</section>
+
 				<section>Q&A and Resources</section>
+
 			</div>
 		</div>
 
