adding more to index.html

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 		<div class="reveal">
 			<div class="slides">
 				<section><h1>Leveraging <strong>{AI}</strong></h1><br/><code>Coding with a systems thinking approach</code>
-					<p>What does this mean? What really is systems thinking. Well let's compare it to medicine where many doctors specialize in their dicipline but have to punt you from doctor to doctor if they cannot connect the dots with other areas of modern medicine. A holistic doctor has one advantage in that they have the ability to go to medical school and decide how to approach the human body as a complete map. They may not have the benefit of the latest tools and technology but atleast they can be very effective atleast in finding negative habits and patterns that many other doctors overlook. But what if you could have the benefit of all the modern technology and also approach medicine with a connect the dots mentality, it would be less of an assembly line and they would have all of the tools to be able to diagnose and find the root cause quickly.
+					<p>What does this mean? How can everyday people take their ideas and birth it into the world. 
 
-					So systems thinking is being able to look at technology from a birds eye view and at the same time be able to fufill deficencies and be able to look across diperate methodologies but still connect the dots to create next level systems, software, hardware configurations, and networking to fit the needs of the future.
+					As non-technical vibe coding is becoming more popular. But also with a bunch of broken and half-baked code there's a higher need to for app security, better debugging and staying up with the advancement of AI, robotics, and greater compute.
 
-					With the increase of advanced technologies across europe and asia, specifically talking about Russia, China, India, North Korea, Israel, and a few other countries and regions responsible for creating some of the most advanced technologies and malware. The US whether we agree with the rate of advancement or not is competing on the global market to produce the next level of CPU manufacturing and tech-infrastructure to both keep our military and espionage hackers (whether the US admits to having some of the best hackers at their finger tips) well equipped to stay ahead.
+					Elon, whether you agree with him or not, was recently quoted saying that we would reach AGI by the end of next year, and reach superAI projected within the decade. But what's blatantly clear is that the AI that is available to governments and research labs is at a level leagues above what's being released to the mass market or even corporate america at large.
+
+					So what happens when everyday people stay with the 95% and don't take massive action. Or if you have that burning desire to birth something new into the world, but don't. In a book about the dying the top regret that they had was not taking the risk or doing the things that they knew would create fulfillment. I'm here to help those who are inspired to maybe learn something from this class or be able to take some of these ideas and apply it to their life and the greater world of tech.
 
 					Stay tuned for the coding demo at the end.
 
@@ -52,18 +54,25 @@
 					<section>My App's</section>
 				</section>
 
-				<section>What is System's Thinking: The person who implements systems thinking wins every time
+				<section>What is System's Thinking: The person who implements systems thinking wins over the hardworking person who builds tech slowly.
 					<p>What Are SWARMS and how do they relate to systems thinking and automation?</p>
 					<p>Why AI is a Force Multiplier on effor and what that means for everyday people</p>
 					<p>Why you possess the ability to become a business entity or atleast compete on the global market when everyone else is discouraged and focused too much on politics and watching the news.</p>
 				</section>
 
 				<section>Vibe Coding, Not Even ONCE, the benefits and pitfalls of vibecoding
-					<p>Although there are many set and forget benefits to building features with vibecoding, AI available to the mass market is either weak or it's designed to work well only on a certain set of task-types. THis being the case you have many behavior side effects and mistakes in your code called bugs, these bugs although seemingly harmless create wide gaps in the infrastructure for suspecting botnets and others to walk on in, considering that you've released your work to the world in a production style app.</p>
+					- People who vibe code create the app in a rush
+					- they neglect to understand file, modules, syntax and the underlying logic: even if the language that's being written by the AI is very human readable and almost reads like english.
+					- They think that it's easier to pay a contractor buckets of money to save time and do the hard work, often these developers can get you to a MVP or minimum viable product but they can't refine the app or will continue charging you to maintain or fix your app when it inevitably breaks.
+					- Understanding conventions and syntax doesn't mean that you need to learn the whole language overnight. AI assistants, chatbots, or agents are great at answering questions, we'll get into plan mode in the opencode and how you can create an extensive blueprint of app features before you have the AI build. This can mitigate mistakes and misdirection caused by the current LLMs quirks and behaviors.
+					- You will get a greater level of satisfaction creating something that goes beyond what the average coder can create.
+					- Vibe coding is an excellent seqaue to get into software but ultimately you want break through the cap of growth that you reach by not knowing what you don't know.
 				</section>
 
-				<section>Botnets, Malware, Mass Surveilance, and App Pipelines: Business people ship way too fast for IT to keep up
-					<p>To understand how to create effective software, we first want to understand a side effect of companies that ship apps quickly and how it impacts how it affects how we write code. If you write software for just your smart home or to solve a problem for you and your family. Or even if your software is mostly airgapped, you will not have to take in these considerations. But if you want thousands to potentially millions or even billions of people to use your code, then we are liable to make sure our users are and their data are safe from prying eyes.<p/>
+				<section>Botnets, Malware, Mass Surveilance, and App Pipelines:  Businesses ship their tech way too fast for IT to keep up
+					<p>What happens when you reach a hundred users, grow to ten thousand overnight and cannot handle the pipeline. Companies these days have the bottom line to ship quickly and get the highest margin for work put in. For this reason IT departments are overloaded with shoring up app security and closing massive holes in infrastructures. Large databases with our valuable information become easy targets when things scale rapidly. Hackers and scammers exfiltrate and leak data to the underground.<p/>
+
+					<p>Let me tell you a story of The russian bear.... and how easily they gained persistent access.</p>
 
 					<p/> AI has enabled the average hacker to create masterful works of art in malware, botnets, and namely pry open vulnerabilities in the forms of bugs to gain access to client, the backend, and eventually mass storage in the form of a database
 
@@ -79,6 +88,7 @@
 					<p>How can a non-technical person get started right now? Gaining the skills to close the gap and build systems and Apps that are made with the user in mind</p>
 					<p>Timing and shipping ideas for the long-game</p>
 					<p>Following your inspiration and the winner effect</p>
+					<p>Those willing to do the work will always outpace the 95%</p>
 				</section>
 
 				<section>Learning how to think in code, Choosing a framework and Coding environment, human-readability and choosing quirks wisely.
@@ -90,17 +100,29 @@
 				<section>The command line is your friend, Bash, ZSH, and mastering unix, going back to the origin of MS_DoS</section>
 				
 				<section>AI Tools, TUI, MetaLlama, Ollama, leveraging low cost or free tools</section>
+
 				<section>Take a Break</section>
+
 				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer</section>
+
 				<section>Syntax and PseudoCode</section>
+
 				<section>$1.5 Trillion Dollar Market 📈</section>
+
 				<section>Generating an Idea worth your time. What am I solving and what is my intention for building this.</section>
+
 				<section>Going from build to an app architecture</section>
+
 				<section>Creating your own Agents to work while you sleep</section>
+
 				<section>Debugging</section>
+
 				<section>CyberSec, Robotics, and Ethical Hacking: Adopting other systems and frameworks and hardening your App's security</section>
+
 				<section>The Future of AI and Humanity</section>
+
 				<section>Dopamine Detox and Deciding a Price that you're willing to pay to get your ideas out into the world</section>
+				
 				<section>Coding Demo</section>
 
 				<section>Q&A and Resources</section>
