doing good in the dukipiehole

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section><h1>Leveraging <strong>{AI}</strong></h1><br/><code>Coding with a systems thinking approach</code>
-					<p>What does this mean? How can everyday people take their ideas and birth it into the world. 
+				<section><h1>Leveraging <strong>{AI}</strong></h1><br/><code> to Code</code>
+					<p>What does this mean? How can everyday non-technical take the steps, gain the knowledge, and apply it to birth their ideas out into the world. 
 
-					As non-technical vibe coding is becoming more popular. But also with a bunch of broken and half-baked code there's a higher need to for app security, better debugging and staying up with the advancement of AI, robotics, and greater compute.
+					As vibe coding is becoming more popular, more people are swarming to create the next big mobile app or learn how to code. But just like the name implies, you're relying on your vibe to instruct the AI agent and at the whim of it's limitations. Eventually in not too many years, AI is projected to close that technical gap and so anyone and everyone will soon be able to create a top tier production app.
+
+					But until then we may want to have the freedom to go beyond and create something that we'e always wanted to create.
 
 					Elon, whether you agree with him or not, was recently quoted saying that we would reach AGI by the end of next year, and reach superAI projected within the decade. But what's blatantly clear is that the AI that is available to governments and research labs is at a level leagues above what's being released to the mass market or even corporate america at large.
 
@@ -55,19 +57,22 @@
 				</section>
 
 				<section>What is System's Thinking: The person who implements systems thinking wins over the hardworking person who builds tech slowly.
-					<p>What Are SWARMS and how do they relate to systems thinking and automation?</p>
-					<p>Why AI is a Force Multiplier on effor and what that means for everyday people</p>
-					<p>Why you possess the ability to become a business entity or atleast compete on the global market when everyone else is discouraged and focused too much on politics and watching the news.</p>
+					<p>What Are SWARMS and how do they relate to systems thinking and automation? Multi-agent systems, the systems of the future along side operating in our physical world with smart infrastructure and IoT</p>
+					<p>Why AI is a Force Multiplier on effort and what that means for us? AI is a human auto-complete of sorts, more in terms of automation but is not yet outsourcing our creativity. But there are also many arguments that more powerful large language models allow for similar levels of creativity, paying a premium for this power of course.</p>
+					<p>Why everyone should consider becoming their own business entity and competing on the global market. Artificial intelligence and robotics are part of the technology wave projected to contribute trillions of dollars by the early 2030s, with AI alone expected to influence nearly every occupation and add as much as $13–$16 trillion in market value for major firms as adoption scales. Even though big tech companies publicly emphasize augmentation, frontier AI leaders report that automation is already reshaping hiring patterns, particularly for routine, entry‑level, and task-based work, and that up to 70% of current jobs could be replaced or delegated to AI systems within the next decade. This rapid shift makes entrepreneurial independence and lifelong adaptability increasingly valuable in a world where traditional employment structures are under pressure from emerging autonomous systems.</p>
 				</section>
+		
+				<section>**Vibe Coding, Not Even ONCE: Benefits and Pitfalls**  
+					{Vibe Coding Memes}
 
-				<section>Vibe Coding, Not Even ONCE, the benefits and pitfalls of vibecoding
-					- People who vibe code create the app in a rush
-					- they neglect to understand file, modules, syntax and the underlying logic: even if the language that's being written by the AI is very human readable and almost reads like english.
-					- They think that it's easier to pay a contractor buckets of money to save time and do the hard work, often these developers can get you to a MVP or minimum viable product but they can't refine the app or will continue charging you to maintain or fix your app when it inevitably breaks.
-					- Understanding conventions and syntax doesn't mean that you need to learn the whole language overnight. AI assistants, chatbots, or agents are great at answering questions, we'll get into plan mode in the opencode and how you can create an extensive blueprint of app features before you have the AI build. This can mitigate mistakes and misdirection caused by the current LLMs quirks and behaviors.
-					- You will get a greater level of satisfaction creating something that goes beyond what the average coder can create.
-					- Vibe coding is an excellent seqaue to get into software but ultimately you want break through the cap of growth that you reach by not knowing what you don't know.
-				</section>
+					* Vibe coding is an excellent way to get started with software, but ultimately it limits growth once you hit the ceiling of what you don’t know.
+					* People who vibe code often rush the app creation process.
+					* They neglect to understand files, modules, syntax, and the underlying logic — even if the AI-written language is human-readable and almost like English.
+					* They assume it’s easier to pay contractors to save time and handle the hard work. While these developers can help you reach an MVP, they often cannot refine the app and may continue charging to maintain or fix it when it inevitably breaks.
+					* Understanding conventions and syntax doesn’t mean learning the entire language overnight. AI assistants, chatbots, or agents are excellent for answering questions. In the opencode, we’ll cover how to create an extensive blueprint of app features before letting AI build, which helps mitigate mistakes and misdirection caused by LLM quirks.
+					* Creating an app yourself will give you a greater level of satisfaction and allow you to go beyond what the average coder can produce.
+
+				</section>  
 
 				<section>Botnets, Malware, Mass Surveilance, and App Pipelines:  Businesses ship their tech way too fast for IT to keep up
 					<p>What happens when you reach a hundred users, grow to ten thousand overnight and cannot handle the pipeline. Companies these days have the bottom line to ship quickly and get the highest margin for work put in. For this reason IT departments are overloaded with shoring up app security and closing massive holes in infrastructures. Large databases with our valuable information become easy targets when things scale rapidly. Hackers and scammers exfiltrate and leak data to the underground.<p/>
@@ -91,23 +96,32 @@
 					<p>Those willing to do the work will always outpace the 95%</p>
 				</section>
 
-				<section>Learning how to think in code, Choosing a framework and Coding environment, human-readability and choosing quirks wisely.
-					<p>High Level VS Low Level Languages</p>
-					<p>Compiling and Transpiling</p>
-					<p>Choose your weapon Meme, finding the right tools for your toolbelt</p>
+				<section>
+					* Understand problem-solving logic before writing code
+					* Practice with whiteboarding exercises
+					* Read official documentation to learn conventions
+					* Compare high-level vs low-level languages
+					* Learn the difference between compiling and transpiling
+					* Explore frameworks and select one that fits your goals
+					* Set up a coding environment for productivity
+					* Experiment with tools and libraries to build your personal toolkit
+					* Reference memes or analogies to remember concepts
+
 				</section>
 
 				<section>The command line is your friend, Bash, ZSH, and mastering unix, going back to the origin of MS_DoS</section>
+				<!-- could have people pair up and share computers in pairs of 2-4 and create something or do an engaging exercise -->
 				
 				<section>AI Tools, TUI, MetaLlama, Ollama, leveraging low cost or free tools</section>
 
 				<section>Take a Break</section>
 
-				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer</section>
+				<section>OpenCode: Replace the vibe with something better, Prompt Engineering for Dummies!</section>
+
+				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer????</section>
 
 				<section>Syntax and PseudoCode</section>
 
-				<section>$1.5 Trillion Dollar Market 📈</section>
 
 				<section>Generating an Idea worth your time. What am I solving and what is my intention for building this.</section>
 
