adding more sdras

--- a/index.html
+++ b/index.html
@@ -116,12 +116,13 @@
 
 				<section>Take a Break</section>
 
+				<section>Sarah Drasner, you can do a lot of cool visual effects with very little code, leveraging JS</section>
+
 				<section>OpenCode: Replace the vibe with something better, Prompt Engineering for Dummies!</section>
 
 				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer????</section>
 
 				<section>Syntax and PseudoCode</section>
-
 
 				<section>Generating an Idea worth your time. What am I solving and what is my intention for building this.</section>
 
