--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 				
 				<section>AI Tools, TUI, MetaLlama, Ollama, leveraging low cost or free tools</section>
 
+				<section>Fun exercise mini demo, Using code to create music</section>
+
 				<section>Take a Break</section>
 
 				<section>Sarah Drasner, you can do a lot of cool visual effects with very little code, leveraging JS</section>
