--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				<section>Go around the class, have everyone say their name and what inspired them to learn about AI and the future of Tech.</section>
 
 				<section>Who Am I?
+					Add picture with Timur Garayev and beating a 2900 on lichess.
 					<p>
 						I grew up in a Jewish family on the west coast and was a nerd as kid to be able to escape a pretty traumatic, at the time, childhood by doing "ethical hacking". My brother and I were moved aroudn alot and had sustained being physically and mentally tortured by our biological mom. So I compounded all of that trapped enerfy to be able into an outlet of problem solving and tinkering.
 
@@ -52,7 +53,10 @@
 					<p/>
 
 					<section>Ethical Hacking</section>
-					<section>Chess and the hunger for more</section>
+					<section>Chess and the hunger for more
+						<p>A bad plan is better than no plan at all, Mikhail Chigorin (1850–1908)</p>
+					</section>
+
 					<section>My App's</section>
 				</section>
 
@@ -77,7 +81,7 @@
 				<section>Botnets, Malware, Mass Surveilance, and App Pipelines:  Businesses ship their tech way too fast for IT to keep up
 					<p>What happens when you reach a hundred users, grow to ten thousand overnight and cannot handle the pipeline. Companies these days have the bottom line to ship quickly and get the highest margin for work put in. For this reason IT departments are overloaded with shoring up app security and closing massive holes in infrastructures. Large databases with our valuable information become easy targets when things scale rapidly. Hackers and scammers exfiltrate and leak data to the underground.<p/>
 
-					<p>Let me tell you a story of The russian bear.... and how easily they gained persistent access.</p>
+					<p>Let me tell you a story of The russian bears.... and how easily they gained persistent access.</p>
 
 					<p/> AI has enabled the average hacker to create masterful works of art in malware, botnets, and namely pry open vulnerabilities in the forms of bugs to gain access to client, the backend, and eventually mass storage in the form of a database
 
@@ -118,13 +122,16 @@
 
 				<section>Take a Break</section>
 
-				<section>Sarah Drasner, you can do a lot of cool visual effects with very little code, leveraging JS</section>
+				<section>case studies Sdras and Penguins on Bread, you can do a lot of cool visual effects with very little code, leveraging JS</section>
 
 				<section>OpenCode: Replace the vibe with something better, Prompt Engineering for Dummies!</section>
 
 				<section>Pair up and answer these 4 questions, take turns being a prospective user and the App engineer????</section>
 
-				<section>Syntax and PseudoCode</section>
+				<section>Syntax and PseudoCode, why you can Learn How to Learn. 
+
+					- Elephant connected to a pole, an elephant that doubts itself will not pull the stake out of the ground.
+				</section>
 
 				<section>Generating an Idea worth your time. What am I solving and what is my intention for building this.</section>
 
@@ -132,15 +139,13 @@
 
 				<section>Creating your own Agents to work while you sleep</section>
 
-				<section>Debugging</section>
-
 				<section>CyberSec, Robotics, and Ethical Hacking: Adopting other systems and frameworks and hardening your App's security</section>
 
 				<section>The Future of AI and Humanity</section>
 
 				<section>Dopamine Detox and Deciding a Price that you're willing to pay to get your ideas out into the world</section>
 				
-				<section>Coding Demo</section>
+				<section>Coding Demo + TechNYC.io plug</section>
 
 				<section>Q&A and Resources</section>
 
